@@ -17,9 +17,44 @@
         <junit-platform.version>1.7.2</junit-platform.version>
         <jackson.version>2.12.5</jackson.version>
         <spring-boot.version>2.6.1</spring-boot.version>
+        <arrow.version>6.0.1</arrow.version>
+        <eclipse-collections.version>11.0.0</eclipse-collections.version>
+        <roaring-bitmap.version>0.9.15</roaring-bitmap.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-vector</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-algorithm</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-memory-netty</artifactId>
+            <version>${arrow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.roaringbitmap</groupId>
+            <artifactId>RoaringBitmap</artifactId>
+            <version>${roaring-bitmap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+            <version>${eclipse-collections.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+            <version>${eclipse-collections.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -41,6 +76,16 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.13</artifactId>
             <version>${spark.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>arrow-memory-netty</artifactId>
+                    <groupId>org.apache.arrow</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>arrow-vector</artifactId>
+                    <groupId>org.apache.arrow</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -120,8 +165,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--add-opens</arg>
-                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                            <arg>--add-opens</arg>
+                            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                            <arg>--add-exports</arg>
+                            <arg>java.base/jdk.internal.util=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
